ENG-1311 corrections for heights and double scroll in regular and modal-lg modals
git-tfs-id: [http://hillstfs2013:8080/tfs/Phytel]$/Nightingale;C16431

--- a/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_modals.scss
+++ b/Client Apps/NG/Assets/Production/Current/Nightingale.Assets/Styles/partials/_modals.scss
@@ -45,12 +45,11 @@
   }
   .body {
     padding: $grid-padding;
-    
+    max-height: 400px;
     > .row.modal-tab { 
       overflow: auto;
       max-height: 400px; 
       min-height: 400px; 
-      //height: 100%;
     }
   }
   footer {
@@ -83,6 +82,7 @@
     @include modalheight(100%, 109px);    
     .body {
         @include modalheight(100%, 94px);
+        max-height: 1000%;
         > .row.modal-tab{
             max-height: 1000%;
         }
